--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,12 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile
+      cache_to: 
+        - type=local,dest=/tmp/.buildx-cache/backend,mode=max
+
+      cache_from:
+        - type=local,src=/tmp/.buildx-cache/backend
+
     image: hamoyee/api-image:latest
     networks:
       - db-network
@@ -35,6 +41,10 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
+      cache_to:
+        - type=local,dest=/tmp/.buildx-cache/frontend,mode=max
+      cache_from:
+        - type=local,src=/tmp/.buildx-cache/frontend
     image:
       hamoyee/client:latest
     ports:
