--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Docker Image Build
         run: |
-            docker compose -f docker-compose-actions.yml build --build-arg BUILDKIT_INLINE_CACHE=1
+            docker compose -f docker-compose.yml build --build-arg BUILDKIT_INLINE_CACHE=1
 
       - name: Login DockerHub
         run: echo '${{ secrets.DOCKER_PASSWORD}}' | docker login -u '${{ secrets.DOCKER_USERNAME }}' --password-stdin
