--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,13 +47,16 @@ services:
         - type=local,src=/tmp/.buildx-cache/frontend
     image:
       hamoyee/client:latest
+    env_file:
+      - .env
     ports:
       - "80:80"
       - "433:433"
+    volumes:
+      - /etc/letsencrypt/live/43.202.48.164.sslip.io/fullchain.pem:/etc/letsencrypt/live/43.202.48.164.sslip.io/fullchain.pem:ro
+      - /etc/letsencrypt/live/43.202.48.164.sslip.io/privkey.pem:/etc/letsencrypt/live/43.202.48.164.sslip.io/privkey.pem:ro
     networks:
       - api-network
-    env_file:
-      - .env
     depends_on:
       - db
       - api
