--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/work-directory
-            docker-compose -f docker-compose-actions-cache.yml pull
-            docker-compose -f docker-compose-actions-cache.yml down
-            docker-compose -f docker-compose-actions-cache.yml up -d
+            docker-compose -f docker-compose.yml pull
+            docker-compose -f docker-compose.yml down
+            docker-compose -f docker-compose.yml up -d
             docker image prune -f
