--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,13 +1,13 @@
 server {
     listen 443 ssl;
     http2 on;
-    server_name 52.78.183.126.sslip.io;
+    server_name 13.125.197.177.sslip.io;
 
     # SSL 인증 설정
     # SSL 인증서 경로
-    ssl_certificate /etc/letsencrypt/live/52.78.183.126.sslip.io/fullchain.pem;
+    ssl_certificate /etc/letsencrypt/live/13.125.197.177.sslip.io/fullchain.pem;
     # 개인키 경로
-    ssl_certificate_key /etc/letsencrypt/live/52.78.183.126.sslip.io/privkey.pem;
+    ssl_certificate_key /etc/letsencrypt/live/13.125.197.177.sslip.io/privkey.pem;
     
     # SSL 설정
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -33,4 +33,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;    # 실제 클라이언트 IP ex) 127.0.0.1
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 프록시 서버를 거친 클라이언트의 IP 목록
     }
+}
+
+server {
+  listen 80;
+  server_name 13.125.197.177.sslip.io;
+  
+  location / {
+      return 301 https://$host$request_uri;
+  }
 }
